solve unable to scroll to top if body is too long

--- a/src/main.css
+++ b/src/main.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&style=italic&display=swap');
 
-#root {
+body {
+	width: 100%;
 	margin: 0 auto;
 	text-align: center;
 	height: 100svh;
-	width: 100%;
 }
